# corgis

./: .eslintrc  .gitignore  .prettierrc  README.md  index.html  jsconfig.json  package-lock.json  package.json  showcase.md  src.43f25053.css  src.43f25053.css.map  src.7a9af409.js
.github/workflows/: corgis-nft.yml  node.js.yml  rust.yml
assembly/: main.ts  model.ts
assembly/__tests__/: main.spec.ts
ci/: deploy.mjs
contract/: .gitignore  Cargo.toml  README.md  build.rs  config.json  methods.json
contract/src/: corgi.rs  dict.rs  lib.rs  pack.rs  tests.rs
contract/tests/: context.rs  corgis-test.rs  pack-test.rs
public/: index.html
src/: .sassrc.js  App.js  App.jsx  App.scss  Routes.jsx  config.js  index.html  index.js  jsconfig.json
src/App/: App.css
src/component/Account/: Account.js  Account.jsx  (+2 more)
src/constants/: Colors.js  CorgiRates.js
src/context/: NearContext.js
src/contexts/: index.js
src/helpers/: checkAccountLegit.js  humanizeTime.js  toTitleCase.js
src/hooks/: character.js  contract.js  index.js  useDetectClickOutside.js  useHighestBid.js  useInterval.js  useIsAuctionExpired.js
src/router/: GuardedRoute.jsx  Routes.jsx
src/styles/: _animations.scss  _bootstrap.scss  _classes.scss  _fonts.scss  _mixins.scss  _reset.scss  _variables.scss
src/types/: BidTypes.js  CardSizeType.js  CorgiTypes.js  PopupTypes.js  ReactChildrenType.js  ReactChildrenTypes.js  StylesType.js  corgi.js
src/validators/: checkProfanity.js  index.js  validateCorgiName.js
test/: .gitignore  api.test.js  chart.html  measure.mjs  profiler.mjs  stats.mjs
(+476 files in other folders)
